# drakeling

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: drakeling.mdc  hatchling.mdc
deploy/: ai.openclaw.hatchling.plist  drakeling-task.xml  drakeling.plist  drakeling.service  openclaw-hatchling-task.xml  openclaw-hatchling.service
docs/: drakeling_spec_v2.2.md  openclaw_hatchling_spec_v2.2.md  openclaw_integration.md
skill/: SKILL.md
skill/references/: api.md  setup.md
src/drakeling/api/: app.py  attention.py  birth.py  care.py  cooldown.py  export_import.py  release.py  rest.py  status.py  talk.py
src/drakeling/crypto/: bundle.py  token.py
src/drakeling/daemon/: config.py  main.py  setup.py  startup.py  tick.py
src/drakeling/domain/: decay.py  lifecycle.py  models.py  sprites.py  traits.py
src/drakeling/llm/: prompts.py  wrapper.py
src/drakeling/storage/: database.py  models.py  paths.py
src/drakeling/ui/: birth.py  client.py  help.py  main.py  release.py
src/openclaw_hatchling/api/: app.py  attention.py  birth.py  care.py  export_import.py  rest.py  status.py  talk.py
src/openclaw_hatchling/crypto/: bundle.py  identity.py  token.py
src/openclaw_hatchling/daemon/: config.py  main.py  startup.py  tick.py
src/openclaw_hatchling/domain/: decay.py  lifecycle.py  sprites.py  traits.py
src/openclaw_hatchling/llm/: prompts.py  wrapper.py
src/openclaw_hatchling/storage/: database.py  paths.py
tests/: test_api.py  test_crypto.py  test_decay.py  test_lifecycle.py  test_models.py  test_prompts.py  test_sprites.py  test_traits.py
(+11 files in other folders)
