[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drakeling"
version = "0.1.4"
description = "A local, lightweight, learning-only companion creature. Drakeling may optionally be linked to the OpenClaw ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
license-expression = "MIT"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "httpx>=0.28",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "aiosqlite>=0.22.1",
    "cryptography>=46.0.5",
    "textual>=8.0.0",
    "platformdirs>=4.9.2",
    "alembic>=1.18.4",
]

[project.urls]
Homepage = "https://github.com/BVisagie/drakeling"
Repository = "https://github.com/BVisagie/drakeling"
"Issue Tracker" = "https://github.com/BVisagie/drakeling/issues"
"ClawHub Skill Listing" = "https://clawhub.openclaw.ai/skills/drakeling"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
drakelingd = "drakeling.daemon.main:main"
drakeling = "drakeling.ui.main:main"

[tool.hatchling.build]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
